# poker_range_practice

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/poker_range_practice/: __init__.py  flop_strategy.py  poker_hands.py  range_manager.py  ranges.json  test_server.py
src/poker_range_practice/flop/: __init__.py  bb_defense.py  cbet_bvb.py  cbet_limp_sb.py  cbet_vs_bb.py  cbet_vs_sb.py  hand_eval.py  strategy.py
src/poker_range_practice/static/: app.js  flop.js  index.html  style.css
tests/: test_api.py  test_bottom.py  test_closest.py  test_dash.py  test_fix.py  test_fold.py  test_multi_action.py  test_suits.py
